style.css
* {
    margin: 0;
    padding: 0;
    list-style: none;
    box-sizing: border-box;
    text-decoration: none;
}

html {
    scroll-behavior: smooth;
    /* silliq o'tish hyperlink orqali*/
}

body {
    font-family: 'Lato', sans-serif;
}

.container {
    padding: 0;
    /* width 1140 ekan shuning uchun padding ni olib tashadim*/
}

/* ==========================header================================ */
header {
    background: url(images/bg_01.jpg) no-repeat center center / cover;
    width: 100%;
    height: 682px;
    padding-top: 58px;

}

header nav {
    /* margin-top: 58px; */
    background-color: rgba(59, 57, 56, 0.76);
    width: 100%;
    height: 77px;
    /* padding: 0; shart emas . bootstrap grid ni ishlatyapman */
    margin-bottom: 74px;
}

header nav .logo {
    color: #fac81b;
    font-size: 32px;
    font-weight: 700;
    height: 77px;
    /*100% qiludim. ishlamadi. chunki nav ni heightini omadi-da. bu col-12 ni bolasi. heightni menimcha qayerdandir inherit qildi */
}

header nav .logo img {
    width: 50px;
    /*shart emas edi. ln har ehtimolga qarshi */
    height: 55px;
    margin-right: 15px;
}

header nav .logo span {
    color: #fb7d7e;
    font-weight: 400;
    font-family: 'Segoe Script', sans-serif;
}

header nav ul {
    width: 50%;
}

header nav ul li {
    display: block;
}

header nav ul li a:hover {
    border-bottom: 6px solid #e9696a;
    transition-duration: 400ms;
}

header nav ul li a {
    padding: 24px 24px 23px 24px;
    /* padding: 24px 40%; */
    /* border: 1px solid red; */

    font-size: 15px;
    font-weight: 400;
    color: #ffffff;
    text-decoration: none;
    position: relative;
}

.active_nav {
    border-bottom: 6px solid #e9696a;
}

/* bu o'xshamadi. Chiroyli chiqmadi
    header nav ul li a::after{
    position: absolute;
    transform: translate(-25%, 0%);
    margin-top: 23px;
    left: 0; 
    content: " ";
    display: block;
    height: 6px;
    width: 230%;
    background-color:  #e9696a;
    border: 1px solid white;    
} */
.banner .row .col-12 h2 {
    font-size: 32px;
    font-weight: 300;
    color: #000000;

}

.banner .row .col-12 h2 span {
    color: #f06d6e;
    font-weight: 700;
}

.banner .row .col-12 p {
    font-size: 14px;
    font-weight: 400;
    color: #3d3d39;
    margin: 30px 0 50px 0;
    /*margin-top aslida sasl ko'proq edi */
    line-height: 28px;
}

.banner .row .col-12 button {
    border: 1px solid #fac81b;
    cursor: pointer;
    width: 13.15789473684211%;
    height: 50px;
    font-size: 14px;
    font-weight: 400;
    color: #3d3d39;
    margin-bottom: 140px;
    /*154px edi. maket bn mos kemadi negadir */
    position: relative;
}

.banner .row .col-12 button::after {
    position: absolute;
    content: " ";
    width: 5px;
    height: 50px;
    display: block;
    left: -1px;
    top: -1px;
    background-image: linear-gradient(to right, #f7e7c5, #fac81b, #fac81b, #fac81b, #f9cf3f);
    background-color: #fac81b;
    /* for browsers that cant support gradient*/
}

.banner .row .col-12 .next_slide a {
    color: #6c6966;
}

.banner .row .col-12 .next_slide {
    margin-bottom: 24px;
}

/*========xullas maket bilan bir xil bo';diku hedaer_tugadu_=================================================== */

/*====================#features====================================== */
#features::before {
    content: " ";
    display: block;
    margin: auto;
    width: 88px;
    height: 6px;
    background-color: #ecba0b;
}

#features {
    height: 660px;
    background-color: #e66768;
    /* padding-top: 79px; */
}

#features h3 {
    margin-top: 75px;
    /*79px edi */
    margin-bottom: 70px;
    /*81px edi */
    font-size: 35px;
    font-weight: 400;
    color: #ecba0b;
    text-align: center;
}

#features .container .row .feature_box {
    color: #ffffff;
    text-align: center;
}

#features .container .row .feature_box .img_container {
    width: 167px;
    height: 167px;
    border-radius: 100%;
    background-color: #dd5e5f;
    margin: auto;
}

#features .container .row .feature_box .img_container a {
    color: #ffffff;
}

#features .container .row .feature_box:hover .img_container {
    border: 2px solid #fac81b;
    color: #fac81b;
    transition-duration: 100ms;
}

#features .container .row .feature_box:hover .img_container a {
    color: #fac81b;
    transition-duration: 400ms;
}

#features .container .row .feature_box:hover h2 a {
    color: #fac81b;
    transition-duration: 400ms;
}

#features .container .row .feature_box h2 {
    margin-top: 27px;
    /*39px edi */
    margin-bottom: 20px;
    /*31px edi */
}

#features .container .row .feature_box h2 a {
    color: #ffffff;
    font-size: 22px;
    font-weight: 400;
}

#features .container .row .feature_box p {
    font-size: 14px;
    font-weight: 400;
    line-height: 25px;
    margin-bottom: 30px;
    /* 40px edi*/
}

#features .row .feature_box button {
    border: 1px solid #fac81b;
    width: 56%;
    height: 40px;
    font-size: 14px;
    font-weight: 400;
    color: #ffffff;
    background-color: #e66768;
    margin-bottom: 80px;
    position: relative;
}

#features .row .feature_box button::after {
    position: absolute;
    content: " ";
    width: 7px;
    height: 40px;
    display: block;
    left: -1px;
    top: -1px;
    background-image: linear-gradient(to right, #ea785a, #fac81b, #fac81b, #fac81b, #fac81b, #fac81b, #ea785a);
    background-color: #fac81b;
    /* for browsers that cant support gradient*/
}

/* =====================#our_work===================================== */
#our_work {
    background-color: #f6f1ed;
    height: 770px;
    position: relative;
}

#our_work::before {
    content: " ";
    display: block;
    margin: auto;
    width: 88px;
    height: 6px;
    background-color: #ecba0b;
}

.container-fluid {
    padding: 0;
}
/* ... */

